kubernetes/apps/ai/tei-embeddings/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tei-embeddings
  namespace: ai
  labels:
    app.kubernetes.io/name: tei-embeddings
spec:
  selector:
    app.kubernetes.io/name: tei-embeddings
  ports:
    - name: http
      port: 8080
      targetPort: http
